clusters/cluster1/radarr.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
    spec:
      #      nodeSelector:
      #        fileserv: "true"
      containers:
        - name: radarr
          image: linuxserver/radarr:3.2.2 # {"$imagepolicy": "flux-system:radarr"}
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 7878
          volumeMounts:
            - name: radarr-config
              mountPath: /config
            - name: radarr-movies-nfs
              mountPath: /movies
            - name: radarr-movies2-nfs
              mountPath: /movies2
              #mountPropagation: Bidirectional       
            - name: radarr-movies3-nfs
              mountPath: /movies3
              #mountPropagation: Bidirectional
            - name: radarr-downloads
              mountPath: /downloads
      volumes:
        - name: radarr-config
          hostPath:
            path: /media/radarr/config/
        - name: radarr-movies-nfs
          persistentVolumeClaim:
            claimName: movies-pvc2
        - name: radarr-movies2-nfs
          persistentVolumeClaim:
            claimName: movies2-pvc
        - name: radarr-movies3-nfs
          persistentVolumeClaim:
            claimName: movies3-pvc
        - name: radarr-downloads
          hostPath:
            path: /media/complete
---
