clusters/cluster1/tallflix-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  labels:
    app: sonarr
#    kubernetes.io/name: "sonarr"
spec:
  selector:
    app: sonarr
  ports:
  - name: sonarr
    port: 8989
    targetPort: 8989
  type: ClusterIP
