clusters/cluster1/talflix-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr
#  annotations:
#    kubernetes.io/tls-acme: "true"
spec:
#  tls:
#  - secretName: sonarr-cert
#    hosts:
#    - sonarr.burntsheep.com
#    - sonaar.burntsheep.com
  rules:
#  - host: sonarr.burntsheep.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sonarr
            port: 
              number: 4506
