clusters/cluster1/tallflix-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    #kubernetes.io/tls-acme: "true"
spec:
  tls:
  - hosts:
    - "sonarr.tallflix.ca"
    secretName: tls-secret-sonarr
  rules:
  - host: "sonarr.tallflix.ca"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: sonarr
            port:
              number: 8989
  - host: "radarr.tallflix.ca"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: radarr
            port:
              number: 7878             
  - host: "www.tallflix.ca"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: ombi
            port:
              number: 3579
